--- a/.github/workflows/blog-post-workflows.yml
+++ b/.github/workflows/blog-post-workflows.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: greybillions/blog-post-workflow@master
+      - uses: gautamkrishnar/blog-post-workflow@master
         with:
           max_post_count: "4"
-          feed_list: "https://greyboyle.hashnode.dev"
+          feed_list: "https://www.hashnode.com/feed/@greyboyle"
