--- a/.github/workflows/blog-post-workflows.yml
+++ b/.github/workflows/blog-post-workflows.yml
@@ -2,8 +2,8 @@ name: Latest blog post workflow
 
 on:
   schedule:
-    # Runs every hour
-    - cron: '0 * * * *'
+    # Runs every 12 hour
+    - cron: '0 */12 * * *'
   workflow_dispatch:
 
 jobs:
